pkg/lang/testdata/ub/config/invalid/pin-library-path-not-string.ub
factory: { pin: { library-path: 5 } }
